{
  "version": 4,
  "terraform_version": "0.12.23",
  "serial": 295,
  "lineage": "025457b9-98fe-f0cd-1acc-f7ee57d61e3a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "myelb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:511871943725:loadbalancer/my-classic-elb",
            "availability_zones": [
              "ca-central-1a",
              "ca-central-1b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "my-classic-elb-1011893667.ca-central-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 5,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "my-classic-elb",
            "idle_timeout": 300,
            "instances": [
              "i-0bcad28a1278e1814",
              "i-0f6e008227145fffe"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "my-classic-elb",
            "security_groups": [
              "sg-090be0bdfa7420aa2"
            ],
            "source_security_group": "511871943725/Myelb",
            "source_security_group_id": "sg-090be0bdfa7420aa2",
            "subnets": [
              "subnet-009bb18da04fe6068",
              "subnet-0c77697be38490fdf"
            ],
            "zone_id": "ZQSVJUPU6J1EY"
          },
          "dependencies": [
            "aws_instance.MyPublicInstance",
            "aws_security_group.elbSG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "MyPrivateInstance",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bf54ac1b628cf143",
            "arn": "arn:aws:ec2:ca-central-1:511871943725:instance/i-0d13e152ad4f62863",
            "associate_public_ip_address": false,
            "availability_zone": "ca-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d13e152ad4f62863",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ca-central-1-key-pair",
            "monitoring": false,
            "primary_network_interface_id": "eni-0f9e0697d8d1853e8",
            "private_dns": "ip-10-0-20-65.ca-central-1.compute.internal",
            "private_ip": "10.0.20.65",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0291a6a66f0bcd268",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-06ac828e605247a99",
            "tags": {
              "Environment": "Operations",
              "Name": "MyPrivateServer : 10.0.20.0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fea675924ead992f"
            ]
          },
          "dependencies": [
            "aws_security_group.PrivateServerSG",
            "aws_security_group.WebServerSG",
            "aws_security_group.elbSG",
            "aws_subnet.private_subnet",
            "aws_vpc.myVpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bf54ac1b628cf143",
            "arn": "arn:aws:ec2:ca-central-1:511871943725:instance/i-0e42adf487c864e98",
            "associate_public_ip_address": false,
            "availability_zone": "ca-central-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e42adf487c864e98",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ca-central-1-key-pair",
            "monitoring": false,
            "primary_network_interface_id": "eni-0c372306d5b245d7e",
            "private_dns": "ip-10-0-21-73.ca-central-1.compute.internal",
            "private_ip": "10.0.21.73",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01d08411980ca5b1c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0d5a5b262f04b3e73",
            "tags": {
              "Environment": "Operations",
              "Name": "MyPrivateServer : 10.0.21.0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fea675924ead992f"
            ]
          },
          "dependencies": [
            "aws_security_group.PrivateServerSG",
            "aws_security_group.WebServerSG",
            "aws_security_group.elbSG",
            "aws_subnet.private_subnet",
            "aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "MyPublicInstance",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bf54ac1b628cf143",
            "arn": "arn:aws:ec2:ca-central-1:511871943725:instance/i-0f6e008227145fffe",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f6e008227145fffe",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ca-central-1-key-pair",
            "monitoring": false,
            "primary_network_interface_id": "eni-04a2c274cf6e9ad0f",
            "private_dns": "ip-10-0-10-186.ca-central-1.compute.internal",
            "private_ip": "10.0.10.186",
            "public_dns": "ec2-15-223-67-82.ca-central-1.compute.amazonaws.com",
            "public_ip": "15.223.67.82",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00d9e687025bfbcdc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0c77697be38490fdf",
            "tags": {
              "Environment": "Operations",
              "Name": "MyWebServer : 10.0.10.0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0bacac2c0c3c8adf3"
            ]
          },
          "dependencies": [
            "aws_security_group.WebServerSG",
            "aws_security_group.elbSG",
            "aws_subnet.public_subnet",
            "aws_vpc.myVpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bf54ac1b628cf143",
            "arn": "arn:aws:ec2:ca-central-1:511871943725:instance/i-0bcad28a1278e1814",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bcad28a1278e1814",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ca-central-1-key-pair",
            "monitoring": false,
            "primary_network_interface_id": "eni-0fb10aa438512ce1f",
            "private_dns": "ip-10-0-11-190.ca-central-1.compute.internal",
            "private_ip": "10.0.11.190",
            "public_dns": "ec2-35-183-76-70.ca-central-1.compute.amazonaws.com",
            "public_ip": "35.183.76.70",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-042ab4c4bf82bbab5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-009bb18da04fe6068",
            "tags": {
              "Environment": "Operations",
              "Name": "MyWebServer : 10.0.11.0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0bacac2c0c3c8adf3"
            ]
          },
          "dependencies": [
            "aws_security_group.WebServerSG",
            "aws_security_group.elbSG",
            "aws_subnet.public_subnet",
            "aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0256fbcb0d5abdc7e",
            "owner_id": "511871943725",
            "tags": {
              "Name": "myIgw - vpc-04fe7e63b4ab80cae"
            },
            "vpc_id": "vpc-04fe7e63b4ab80cae"
          },
          "dependencies": [
            "aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-064a7feedef09b786",
            "owner_id": "511871943725",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0256fbcb0d5abdc7e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-04fe7e63b4ab80cae"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0543b4cafdd49711c",
            "route_table_id": "rtb-064a7feedef09b786",
            "subnet_id": "subnet-0c77697be38490fdf"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.myVpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ea8a5587c22cc21",
            "route_table_id": "rtb-064a7feedef09b786",
            "subnet_id": "subnet-009bb18da04fe6068"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "PrivateServerSG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:511871943725:security-group/sg-0fea675924ead992f",
            "description": "Allow inbound traffic from Public Subnet",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0bacac2c0c3c8adf3"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fea675924ead992f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [
                  "sg-0bacac2c0c3c8adf3"
                ],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bacac2c0c3c8adf3"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "PrivateServerSG",
            "name_prefix": null,
            "owner_id": "511871943725",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-04fe7e63b4ab80cae"
          },
          "dependencies": [
            "aws_security_group.WebServerSG",
            "aws_security_group.elbSG",
            "aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "WebServerSG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:511871943725:security-group/sg-0bacac2c0c3c8adf3",
            "description": "Allow inbound traffic from LoadBalancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bacac2c0c3c8adf3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-090be0bdfa7420aa2"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "WebServerSG",
            "name_prefix": null,
            "owner_id": "511871943725",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-04fe7e63b4ab80cae"
          },
          "dependencies": [
            "aws_security_group.elbSG",
            "aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elbSG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:511871943725:security-group/sg-090be0bdfa7420aa2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-090be0bdfa7420aa2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Myelb",
            "name_prefix": null,
            "owner_id": "511871943725",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-04fe7e63b4ab80cae"
          },
          "dependencies": [
            "aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:511871943725:subnet/subnet-06ac828e605247a99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.20.0/24",
            "id": "subnet-06ac828e605247a99",
            "map_public_ip_on_launch": false,
            "owner_id": "511871943725",
            "tags": {
              "Name": "MyPrivateSubnet-20"
            },
            "vpc_id": "vpc-04fe7e63b4ab80cae"
          },
          "dependencies": [
            "aws_vpc.myVpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:511871943725:subnet/subnet-0d5a5b262f04b3e73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.21.0/24",
            "id": "subnet-0d5a5b262f04b3e73",
            "map_public_ip_on_launch": false,
            "owner_id": "511871943725",
            "tags": {
              "Name": "MyPrivateSubnet-21"
            },
            "vpc_id": "vpc-04fe7e63b4ab80cae"
          },
          "dependencies": [
            "aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:511871943725:subnet/subnet-0c77697be38490fdf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-0c77697be38490fdf",
            "map_public_ip_on_launch": true,
            "owner_id": "511871943725",
            "tags": {
              "Name": "MyPublicSubnet-10"
            },
            "vpc_id": "vpc-04fe7e63b4ab80cae"
          },
          "dependencies": [
            "aws_vpc.myVpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:511871943725:subnet/subnet-009bb18da04fe6068",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-009bb18da04fe6068",
            "map_public_ip_on_launch": true,
            "owner_id": "511871943725",
            "tags": {
              "Name": "MyPublicSubnet-11"
            },
            "vpc_id": "vpc-04fe7e63b4ab80cae"
          },
          "dependencies": [
            "aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myVpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:511871943725:vpc/vpc-04fe7e63b4ab80cae",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0263b905270752065",
            "default_route_table_id": "rtb-0d0f49c1cc7f26b78",
            "default_security_group_id": "sg-01474fb7a0ab8e191",
            "dhcp_options_id": "dopt-3c387354",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04fe7e63b4ab80cae",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d0f49c1cc7f26b78",
            "owner_id": "511871943725",
            "tags": {
              "Location": "Toronto-Canada",
              "Name": "myVpc"
            }
          }
        }
      ]
    }
  ]
}